--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools">
 
     <data>
-
+        <variable name="viewmodel" type="com.melayer.onlineapp.CalcData" />
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
@@ -19,7 +19,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="224dp"
             android:padding="10dp"
-            android:text="TextView"
+            android:text="@{viewmodel.res}"
             android:textSize="30sp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.464"
@@ -34,7 +34,9 @@
             android:layout_marginTop="53dp"
             android:text="Okay"
             app:layout_constraintStart_toStartOf="@+id/txtDt"
-            app:layout_constraintTop_toBottomOf="@+id/txtDt" />
+            app:layout_constraintTop_toBottomOf="@+id/txtDt"
+            android:onClick="@{() -> viewmodel.calc()}"
+            />
 
         <EditText
             android:id="@+id/etNumOne"
@@ -45,13 +47,15 @@
             android:inputType="number"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintTop_toTopOf="parent"
+            android:text="@{viewmodel.num1}"/>
 
         <EditText
             android:id="@+id/etNumTwo"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="38dp"
+            android:text="@{viewmodel.num2}"
             android:ems="10"
             android:inputType="number"
             app:layout_constraintStart_toStartOf="@+id/etNumOne"
