--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -19,12 +19,13 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="224dp"
             android:padding="10dp"
-            android:text="@{viewmodel.res}"
             android:textSize="30sp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.464"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintTop_toTopOf="parent"
+            android:text="@{viewmodel.res}"
+            />
 
         <Button
             android:id="@+id/btnOk"
@@ -48,18 +49,20 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            android:text="@{viewmodel.num1}"/>
+            android:text="@={viewmodel.num1}"
+           />
 
         <EditText
             android:id="@+id/etNumTwo"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="38dp"
-            android:text="@{viewmodel.num2}"
             android:ems="10"
             android:inputType="number"
             app:layout_constraintStart_toStartOf="@+id/etNumOne"
-            app:layout_constraintTop_toBottomOf="@+id/etNumOne" />
+            app:layout_constraintTop_toBottomOf="@+id/etNumOne"
+            android:text="@={viewmodel.num2}"
+            />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
