--- a/interact/src/main/res/layout/activity_main.xml
+++ b/interact/src/main/res/layout/activity_main.xml
@@ -29,4 +29,15 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_chainStyle="packed" />
+
+    <Switch
+        android:id="@+id/swtAld"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="1dp"
+        android:layout_marginBottom="44dp"
+        android:text="Notofications"
+        app:layout_constraintBottom_toTopOf="@+id/etMb"
+        app:layout_constraintEnd_toEndOf="@+id/etMb" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
