--- a/recyclerview/src/main/res/layout/wa_li.xml
+++ b/recyclerview/src/main/res/layout/wa_li.xml
@@ -10,7 +10,6 @@
         class="com.mikhaellopez.circularimageview.CircularImageView"
         android:layout_width="104dp"
         android:layout_height="89dp"
-        android:layout_marginStart="16dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
@@ -49,6 +48,7 @@
         android:textSize="18sp"
         android:textStyle="bold"
         app:layout_constraintBottom_toTopOf="@+id/txtCnt"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/txtMsg"
         app:layout_constraintTop_toTopOf="@+id/txtNm" />
 
@@ -57,18 +57,20 @@
         android:layout_width="29dp"
         android:layout_height="32dp"
         android:layout_marginTop="4dp"
+        app:layout_constraintEnd_toStartOf="@+id/txtCnt"
         app:layout_constraintStart_toEndOf="@+id/txtMsg"
         app:layout_constraintTop_toBottomOf="@+id/txtTm"
         app:srcCompat="@drawable/ic_baseline_volume_off_24" />
 
     <TextView
         android:id="@+id/txtCnt"
-        android:layout_width="36dp"
-        android:layout_height="37dp"
+        android:layout_width="29dp"
+        android:layout_height="31dp"
+        android:layout_marginEnd="16dp"
         android:background="@drawable/wa_round_pp"
         android:gravity="center"
         android:text="120"
         android:textColor="#FFFFFF"
         app:layout_constraintBottom_toBottomOf="@+id/txtMsg"
-        app:layout_constraintEnd_toEndOf="@+id/txtTm" />
+        app:layout_constraintEnd_toEndOf="parent" />
 </androidx.constraintlayout.widget.ConstraintLayout>
